--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(241, 242, 243);
+    background-color: white;
 }
 h1, h2 {
     text-align: center;
@@ -28,7 +28,11 @@ h1, h2 {
 }
 
 /* DVs07 */
-
+.russo-one-regular {
+    font-family: "Russo One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}  
 .rationale-regular {
     font-family: "Rationale", sans-serif;
     font-weight: 400;
@@ -50,26 +54,50 @@ font-variation-settings:"wdth" 100;
 .uppercase {
     text-transform: uppercase;
 }
+.text-center {
+    text-align: center;
+}
 .navbar{
-    background-color: rgb(31 41 55);
+    background-color: rgb(17, 88, 201);
     color: white;
     height: 45px;
-    padding-left: 5px;
+    padding-left: 35px;
+    padding-top: 10px;
     margin-bottom: 20px;
-    text-align: center;
 }
 .fz-2rem{
     font-size: 2rem;
 }
 input[type="submit"] {
-    background-color: #e1993a !important;
-    color: white !important;
-    border-color: #e1993a!important;
-    
+    background-color: #31d96c;
+    color: white;
 }
-
 input[type="submit"]:hover {
-    background-color: #d9971d !important;
-    color: rgb(31 41 55) !important;
-    border-color: rgb(31 41 55) !important;
+    background-color: #31d96c;
+    border-color: transparent;
+}
+.flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+.justify-end{
+    justify-content: flex-end;
+}
+.text-default{
+    text-transform: none !important;
+}
+footer{
+    background-color: rgb(17, 88, 201);
+    color: white;
+    position: fixed;
+    bottom: 0;
+}
+.pd-5{
+    padding: 5px;
+}
+.pd-10{
+    padding: 10px;
+}
+.mg-btm-0{
+    margin-bottom: 0;
 }
